--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 Booklist/Booklist.xcodeproj/project.xcworkspace/xcuserdata/arackis.xcuserdatad/UserInterfaceState.xcuserstate
+Booklist/.DS_Store
+Booklist/Booklist/Info.plist
+.DS_Store
