--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Booklist/Booklist.xcodeproj/project.xcworkspace/xcuserdata/arackis.xcuserdatad/U
 Booklist/.DS_Store
 Booklist/Booklist/Info.plist
 .DS_Store
+Booklist/Booklist/GoogleService-Info.plist
